# TF_IDF_C

./: README.md  ci_push.sh  find_diff.sh  push.sh  valgrind_report.txt  valgrind_report_tests.txt
.github/workflows/: ci.yml  compare.yml  iterative.yml  parallel.yml
files/: get_in_list.sh  list_of_files.lll  list_of_files.lll.bak  pg000.txt
files_report/: report_0.txt  report_1.txt  report_10.txt  report_11.txt  report_12.txt  report_13.txt  report_2.txt  report_3.txt  report_4.txt  report_5.txt  report_6.txt  report_7.txt  report_8.txt  report_9.txt
iterative/: ci_push.sh  valgrind_report.txt  valgrind_report_tests.txt
iterative/.github/workflows/: ci.yml
iterative/files/: 12356456.txt  list_of_files.lll
iterative/files_report/: report_3.txt  report_5.txt  report_7.txt
iterative/project/include/: get_idf.h  get_tf_idf.h  tf_idf_top_5.h
iterative/project/src/: CMakeLists.txt  calc_hash.c  get_tf_idf.c
iterative/project/tests/: CMakeLists.txt
iterative/scr/: init.sh  sun_test.sh  test.sh  val.sh  val_test.sh
linters/: run.sh
parallel/: Makefile
parallel/files/: list_of_files.lll
parallel/files_report/: report_1.txt  report_2.txt
parallel/linters/: run.sh
parallel/project/: run.sh
parallel/project/include/: calc_hash.h
parallel/project/tests/: get_tf_idf.cpp
parallel/scr/: boot.sh  report.sh
project/: CMakeLists.txt  list_of_files.lll  main.c  run.sh
project/include/: def.h  ex.h  get_idf.h  get_metr.h  struct.h
project/src/: calc_hash.c  create_shared.c  ex.c  get_idf.c  get_metr.c  get_tf_idf.c  tf_idf_top_5.c
project/tests/: get_idf.cpp  get_metr.cpp  pg000.txt  report_0.txt  test1.cpp  tf_idf_top_5.cpp
scr/: build.sh  val_test.sh
